lib/velosiast/tests/vrs/state/state_err_00_double_param_expected.txt
error: duplicate definitions with name `base`
     --> tests/vrs/state/state_err_00_double_param.vrs:1:30
      |
    1 |  state = StateDef(base: addr, base: addr) {
      |                   ^^^^^^^^^^ previous definition of `base` was here
   ...
      |
    1 |  state = StateDef(base: addr, base: addr) {
      |                               ^^^^^^^^^^ duplicate definition
error: could not compile due to 1 previous errors; 0 warnings emitted


@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
